--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+#App {
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
 .light_mode{
-  background-color: #ffffff;
+  background-color: #f4f4f4;
   color: #1b1b1b;
 }
 
